// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentUpcomingSubPanel renders "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Remaining time
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle length
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Remaining time
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle length
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;
